# vocable-python

./: .gitignore  CLAUDE.md  LICENSE  README.md  app.py  pyproject.toml  scores.json  sequence-diagram.puml  vocable_core.py  vokabeln.json  vokabeltrainer.py
static/css/: custom.css
templates/: add.html  base.html  index.html  quiz.html  quiz_results.html  quiz_setup.html  sessions.html  vocabulary.html
vokabeltrainer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
